view todos added

--- a/index.html
+++ b/index.html
@@ -11,13 +11,19 @@
        <input type="text" name="whatTodo" id="whatTodo">
        <input type="submit" name="addTodoButton" id="addTodoButton">
     </form>
+    <main>
+    <div id="todoWrapper">
     TODOS
     <div id="todos">
     </div>
-
+</div>
+   <div id="doneWrapper">
+   DONES
     <div id="dones">
-        DONES
+        
     </div>
+        </div>
+    </main>
         
     <script src="main.js"></script>
 </body>
