some cleaning + commenting

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TODO</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>YOUR TODO LIST</title>
+    <link rel="shortcut icon" href="images/title.jpg" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800|Roboto" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
